<resources>

    <string name="app_name">Androbotus</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Androbotus</string>
    <string name="server_address">Server IP-address</string>
    <string name="start_btn">Start</string>
    <string name="sensor_data_cptn">Sensor Data</string>
    <string name="accel_cptn">Acceleration</string>
    <string name="orient_cptn">Orientation</string>
    <string name="stop_btn">Stop</string>
    <string name="controls">Controls State</string>
    <string name="esc_label">ESC level</string>
    <string name="servo_label">Servo level</string>
    <string name="console">Console</string>
    <string name="console_output_hint">Console output...</string>
    <string name="accelOutputLabel">Accel:</string>
    <string name="accelOutputHint">Acceleration Data</string>
    <string name="gyroOutputLabel">Gyro:</string>
    <string name="gyroOutputHint">Gyro data</string>
    <string name="gravityLabel">Gravity</string>
    <string name="gravityOutputHint">Gravity output</string>
    <string name="rvectorLabel">R.Vector</string>
    <string name="rvectorOutputHint">Rotation Vector Data</string>
    <string name="enable_ioio">Enable IOIO</string>

</resources>