<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/black" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/ipAddress"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.19"
            android:ems="10"
            android:hint="@string/server_address"
            android:inputType="phone" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/start_btn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.19"
            android:ellipsize="start"
            android:text="@string/start_btn" />

        <Button
            android:id="@+id/stop_btn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.19"
            android:text="@string/stop_btn" />

    </LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<CheckBox
		    android:id="@+id/enableIOIO"
		    android:layout_width="281dp"
		    android:layout_height="wrap_content"
		    android:checked="false"
		    android:text="@string/enable_ioio"
		    android:textColor="@android:color/white" />

		<SurfaceView
		    android:id="@+id/cameraView"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:focusable="false"
		    android:paddingBottom="1dp"
		    android:paddingLeft="5dp"
		    android:paddingTop="1dp"
		    android:visibility="visible" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.01"
        android:orientation="vertical" >
		
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accelOutputLabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />
            <TextView
            	android:id="@+id/accelOutput"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:hint="@string/accelOutputHint"
            	android:textAppearance="?android:attr/textAppearanceMedium"
            	android:textColor="@android:color/white"/>
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        	<TextView
            	android:id="@+id/textView5"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/gyroOutputLabel"
            	android:textAppearance="?android:attr/textAppearanceLarge"
            	android:textColor="@android:color/white" />

        	<TextView
            	android:id="@+id/gyroOutput"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:hint="@string/gyroOutputHint"
            	android:textAppearance="?android:attr/textAppearanceMedium"
            	android:textColor="@android:color/white"/>
				
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewGravity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gravityLabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/gravityOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gravityOutputHint"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"/>
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewRVector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rvectorLabel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/rvectorOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rvectorOutputHint"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"/>
            
        </LinearLayout>
        
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controls"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esc_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servo_label"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" /-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/console"
                android:layout_width="fill_parent"
                android:layout_height="258dp"
                android:background="@android:color/background_dark"
                android:ems="10"
                android:hint="@string/console_output_hint"
                android:maxLines="25"
                android:singleLine="false"
                android:text="@string/console_output_hint"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>